--- a/images/server/krb5.conf
+++ b/images/server/krb5.conf
@@ -4,6 +4,7 @@
 	
 [realms]
 	MYEXAMPLE.COM = {
-		kdc = server.myexample.com
-		admin_server = server.myexample.com
+		kdc = kdc.myexample.com
+		admin_server = kdc.myexample.com
 	}
+
