Starting to develop client

--- a/images/docker-compose.yaml
+++ b/images/docker-compose.yaml
@@ -2,12 +2,17 @@ version: "3.9"
 services:
     kdc:
         build: kdc
-        hostname: kdc.myexample.com
+        hostname: kdc-myexample-com
         networks:
         - myexample.com
     server:
         build: server
-        hostname: server.myexample.com
+        hostname: server-myexample-com
+        networks:
+        - myexample.com
+    client:
+        build: client
+        hostname: client-myexample-com
         networks:
         - myexample.com
 networks:
