--- a/images/base/Dockerfile
+++ b/images/base/Dockerfile
@@ -1,7 +1,9 @@
 
 FROM ubuntu:20.04
 
+ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
+RUN apt-get install -y gdb
 RUN apt-get install -y net-tools
 RUN apt-get install -y dnsutils
 RUN apt-get install -y curl
@@ -9,4 +11,3 @@ RUN apt-get install -y iputils-ping
 RUN apt-get install -y tcpdump
 RUN apt-get install -y netcat
 RUN apt-get install -y vim
-RUN apt-get install -y gdb
