Starting GSSAPI server

--- a/application/gssapi/Makefile
+++ b/application/gssapi/Makefile
@@ -4,9 +4,14 @@ CC=gcc
 CFLAGS=-Wall -Wextra -pedantic-errors -ansi
 LDFLAGS=$(KRB5LIBS)
 
-client: client.c
+server: server.c utils.o
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+client: client.c utils.o
 	$(CC) $(CFLAGS)  -o $@ $^ $(LDFLAGS)
 	
+utils.o: utils.c
+	$(CC) -c $(CFLAGS) -o $@ $^
 
 clean:
 	rm client
