--- a/application/gssapi/Makefile
+++ b/application/gssapi/Makefile
@@ -1,4 +1,9 @@
 
+
+SHELL=/bin/bash
+GREEN="\e[32;1m"
+RESET="\e[0m"
+
 KRB5LIBS=$(shell krb5-config --libs gssapi)
 CC=gcc
 CFLAGS=-Wall -Wextra -pedantic-errors -ansi
@@ -8,13 +13,15 @@ LDFLAGS=$(KRB5LIBS)
 all: server client
 
 server: server.c utils.o
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+	@echo -e $(GREEN)"=== Building server ==="$(RESET)
+	@$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 client: client.c utils.o
-	$(CC) $(CFLAGS)  -o $@ $^ $(LDFLAGS)
+	@echo -e $(GREEN)"=== Building client ==="$(RESET)
+	@$(CC) $(CFLAGS)  -o $@ $^ $(LDFLAGS)
 	
 utils.o: utils.c
-	$(CC) -c $(CFLAGS) -o $@ $^
+	@$(CC) -c $(CFLAGS) -o $@ $^
 
 clean:
 	@rm client server *.o 2>/dev/null | echo "hello" > /dev/null
